src/test/ui/resolve/issue-22692.rs
fn main() {
    let _ = String.new(); //~ ERROR expected value, found struct `String`
}
